# tiedie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
python-sdk/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
python-sdk/sample-python-app/: Makefile  README.md  requirements.txt
python-sdk/sample-python-app/config/: config.ini
python-sdk/sample-python-app/src/: __init__.py  app.py  config.ini  configuration.py
python-sdk/sample-python-app/src/keys/: ca.pem  onboarding-app.p12
python-sdk/sample-python-app/src/templates/: advertisement.html  data_app.html  device.html  device_add.html  device_update.html  devices.html  error.html  index.html  layout.html  oauth2_authorize.html  subscription.html  subscriptions.html
python-sdk/tiedie/: __init__.py
python-sdk/tiedie/api/: __init__.py  auth.py  control_client.py  controlclient.py  data_receiver_client.py  datareceiverclient.py  http_client.py  httpclient.py  onboarding_client.py  onboardingclient.py
python-sdk/tiedie/api/proto/: __init__.py  (+3 more)
python-sdk/tiedie/models/: __init__.py  ble.py  common.py  request.py  requests.py  responses.py  scim.py  zigbee.py
python-sdk/tiedie/tests/: test_control_client.py  test_onboarding_client.py  test_scim.py
python-sdk/tiedie_pylib/: __init__.py
python-sdk/tiedie_pylib/api/: __init__.py  auth.py  controlclient.py  datareceiverclient.py  httpclient.py  onboardingclient.py
python-sdk/tiedie_pylib/models/: __init__.py  ble.py  common.py  request.py  responses.py  scim.py  zigbee.py
(+222 files in other folders)
